# odana

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  run.sh
.aws/: appspec.yml  buildspec.yml
.aws/scripts/: setup.sh  start.sh  validate.sh
.github/workflows/: build.yml  cargofmt.yml  clippy.yml
account/: Cargo.toml
account/src/: lib.rs
apps/builtin/: Cargo.toml
apps/builtin/src/: lib.rs
apps/example/: Cargo.toml  build.rs
apps/example/proto/: types.proto
apps/example/src/: example.types.rs  lib.rs
apps/namespace-registry/: Cargo.toml  build.rs
apps/namespace-registry/proto/: types.proto
apps/namespace-registry/src/: constants.rs  genesis.rs  lib.rs  store.rs
apps/registry/: Cargo.toml
apps/registry/src/: lib.rs
apps/repo/: Cargo.toml
apps/repo/src/: lib.rs
apps/template/: Cargo.toml  build.rs
apps/template/proto/: types.proto
apps/template/src/: lib.rs  types.rs
blockchain/: Cargo.toml
blockchain/src/: account.rs  amount.rs  balances.rs  block.rs  block_storage.rs  blockchain.rs  bootstrap.rs  chain_manager.rs  chain_state.rs  consensus.rs  crypto.rs  errors.rs  lib.rs  mempool.rs  miner.rs  nonce.rs  p2p.rs  peer_man.rs  transaction.rs  utxo.rs
client/: Cargo.toml  build.rs
client/src/: cmd.rs  commands.rs  lib.rs  parser.rs  rpc.rs  util.rs
codec/: Cargo.toml
codec/src/: lib.rs
common/: Cargo.toml
common/base58/: Cargo.toml
common/bech32/: Cargo.toml
common/bech32/src/: lib.rs
common/fixed-hash/: Cargo.toml
common/fixed-hash/benches/: cmp.rs
common/fixed-hash/src/: hash.rs  lib.rs  tests.rs
common/hex/: Cargo.toml
common/hex/src/: lib.rs  serde.rs
common/prefix-hex/: Cargo.toml  README.md
common/prefix-hex/src/: data.rs  error.rs  lib.rs  primitive_types.rs
common/prefix-hex/tests/: data.rs
common/primitive-types/: CHANGELOG.md  Cargo.toml
common/primitive-types/impls/bincode/: Cargo.toml
common/primitive-types/impls/bincode/src/: lib.rs
common/primitive-types/impls/codec/: CHANGELOG.md
common/primitive-types/impls/codec/src/: lib.rs
common/primitive-types/impls/num-traits/src/: lib.rs
common/primitive-types/impls/rlp/: CHANGELOG.md
common/primitive-types/impls/rlp/src/: lib.rs
common/primitive-types/impls/serde/: Cargo.toml
common/primitive-types/impls/serde/benches/: impl_serde.rs  input.rs
common/primitive-types/impls/serde/src/: lib.rs  serialize.rs
common/primitive-types/src/: address.rs  endian.rs  fp_conversion.rs  lib.rs
common/primitive-types/tests/: fp_conversion.rs  num_traits.rs  scale_info.rs
common/rlp/: CHANGELOG.md  Cargo.toml  README.md
common/rlp-derive/: CHANGELOG.md
common/src/: lib.rs
common/tiny-bip39/: Cargo.toml
common/tracing/: Cargo.toml
common/traits/: Cargo.toml
common/types/: Cargo.toml
common/uint/: CHANGELOG.md  Cargo.toml  README.md
consensus/: Cargo.toml
consensus/src/: barossa.rs  coin.rs  constants.rs  error.rs  lib.rs
crypto/: Cargo.toml
crypto/src/: ecdsa.rs  error.rs  lib.rs
dapps/builtin/: Cargo.toml
dapps/namespace-registry/: Cargo.toml  build.rs
docker/: baseimage.dockerfile  build.dockerfile  localnode.dockerfile  run.dockerfile
docker/localnetwork/: docker-compose.yml  run.dockerfile
docs/: build.md  rpc.md
evm/revm/: CHANGELOG.md  Cargo.toml
evm/revm-test/: Cargo.toml
evm/revm_precompiles/: CHANGELOG.md  Cargo.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  messages.rs  sync.rs
merkle/: Cargo.toml
merkle/src/: crypto.rs  errors.rs  hasher.rs  lib.rs
miner/: Cargo.toml
miner-test/: Cargo.toml
miner-test/src/: main.rs
miner/src/: lib.rs  main.rs  worker.rs
morph/: Cargo.toml
morph/src/: error.rs  kv.rs  lib.rs  logdb.rs  snapshot.rs  store.rs
new_state/: Cargo.toml
new_state/src/: lib.rs  storage.rs  tree.rs
node/: Cargo.toml
node/src/: blockchain.rs  download_manager.rs  downloader.rs  environment.rs  error.rs  main.rs  node.rs  sync.rs
p2p/: Cargo.toml
p2p/src/: identity.rs  lib.rs  message.rs  peer_man.rs  peer_manager.rs  request_handler.rs  util.rs
proto/: Cargo.toml  build.rs  net_types.proto  primitive_types.proto  rpc_account.proto  rpc_chain.proto  rpc_runtime.proto  rpc_txs.proto  types.proto
proto/schema/: blockchain.proto  net_types.proto  rpc_account.proto  rpc_chain.proto  rpc_txs.proto  txs.proto  types.proto
proto/src/: blockchain.rs  lib.rs  rpc.rs  tx.rs  types.rs  uchain.types.rs
proto/src/uchain/: types.rs
rpc/: Cargo.toml  build.rs
rpc/src/: account.rs  blockchain.rs  lib.rs  rpc.rs  runtime.rs  txs.rs
rt-bridge/spec/: runtime.wit  storage_api.wit
rt-example/: Cargo.toml
rt-example/src/: lib.rs  runtime.rs  storage_api.rs
rt-test/: Cargo.toml
rt-test/src/: main.rs
rt-wasm/: Cargo.toml
rt-wasm/src/: lib.rs  rt.rs  storage.rs
runtime/: Makefile
runtime/api/: Cargo.toml
runtime/core/: Cargo.toml  build.rs
runtime/framework/: Cargo.toml  build.rs
runtime/io/: Cargo.toml  build.rs
runtime/rune/: Cargo.toml
runtime/spec/: app.wit  core.wit  executor.wit  io.wit  runtime.wit  state.wit  storage.wit  system.wit
runtime/std/: Cargo.toml  with_std.rs  without_std.rs
runtime/vm/: Cargo.toml  build.rs
smt/: Cargo.toml  README.md
smt/src/: constants.rs  error.rs  lib.rs  persistent.rs  proof.rs  smt.rs  store.rs  tree.rs  treehasher.rs  trie.rs  trie_cache.rs  utils.rs
state/: Cargo.toml
state/src/: context.rs  error.rs  kv.rs  kvdb.rs  lib.rs  persistent.rs  schema.rs  store.rs  tree.rs
storage/: Cargo.toml
storage/src/: codec.rs  error.rs  lib.rs  memstore.rs  presistent_store.rs  rocks.rs  sleddb.rs
transaction/: Cargo.toml
transaction/src/: lib.rs
trie/: Cargo.toml
trie/src/: compact.rs  lib.rs  simple.rs  word.rs
txpool/: Cargo.toml
txpool/src/: error.rs  lib.rs  prque.rs  tests.rs  traits.rs  tx_list.rs  tx_lookup.rs  tx_noncer.rs  txlist.rs
uchain/: Cargo.toml
uchain/src/: main.rs  node.rs  sync.rs
utils/prost-extra/: Cargo.toml
utils/prost-extra-build/: Cargo.toml
utils/prost-extra-derive/: Cargo.toml
utils/wasm-builder/: Cargo.toml
utils/wit-codegen/: Cargo.toml
(+96 files in other folders)
