cargo-features = ["edition2021"]
[workspace]
members = [
    #core
    "merkle",
    "trie",
    "node",
    "crypto",
    "blockchain",
    "storage",
    "state",
    "account",
    "codec",
    "transaction",
    "txpool",
    "consensus",
    "miner",
    "p2p",
    "smt",
    "rpc",
    "client",
    #common
    "common/traits",
    "common/uint",
    "common/primitive-types/impls/num-traits",
    "common/primitive-types/impls/serde",
    "common/primitive-types/impls/bincode",
    "common/primitive-types",
    "common/hex",
    "common/fixed-hash",
    "common/types",
    "common/tracing",
    "common/rlp",
    "common/rlp-derive",
    "common/tiny-bip39",
    "common/bech32",
]

[patch.crates-io]
prost = { git = 'https://github.com/mambisi/prost',  branch = "bytes-mod" }

[workspace.dependencies]
anyhow = "1.0.65"
bincode = "2.0.0-rc.2"
rocksdb = { version = "0.17.0" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
tonic = "0.8.0"
prost = "0.11.0"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
clap = { version = "3.0.13", features = ["derive"] }
