cargo-features = ["edition2021"]
[workspace]
members = [
    #core
    "merkle",
    "trie",
    "node",
    "crypto",
    "blockchain",
    "storage",
    "state",
    "account",
    "codec",
    "transaction",
    "txpool",
    "consensus",
    "miner",
    "p2p",
    "smt",
    "rpc",
    "client",
    #common
    "common/traits",
    "common/uint",
    "common/primitive-types/impls/num-traits",
    "common/primitive-types/impls/serde",
    "common/primitive-types/impls/bincode",
    "common/primitive-types",
    "common/hex",
    "common/fixed-hash",
    "common/types",
    "common/tracing",
    "common/rlp",
    "common/rlp-derive",
    "common/tiny-bip39",
    "common/bech32",
    #runtime
    "runtime/api",
    "runtime/std",
    "runtime/io",
    "runtime/core",
    #apps
    "apps/template",
    "apps/repo",
    #utils
    "utils/wasm-builder"
]

[patch.crates-io]
prost = { git = 'https://github.com/mambisi/prost', branch = "bytes-mod" }

[workspace.dependencies]
anyhow = "1.0.65"
bincode = { version = "2.0.0-rc.2", default-feature = false, features = ["alloc"] }
rocksdb = { version = "0.17.0" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
tonic = "0.8.0"
prost = {version = "0.11.0", default-feature = false, features = ["prost-derive"]  }
prost-build = {version = "0.11.0"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.130",default-features = false, features = ["derive"] }
clap = { version = "3.0.13", features = ["derive"] }
