cargo-features = ["edition2021"]
[workspace]
members = [
    #core
    "node",
    "crypto",
    "blockchain",
    "storage",
    "state",
    "account",
    "codec",
    "transaction",
    "txpool",
    "consensus",
    "miner",
    "p2p",
    "smt",
    "rpc",
    "client",
    #common
    "common/traits",
    "common/uint",
    "common/primitive-types/impls/num-traits",
    "common/primitive-types/impls/serde",
    "common/primitive-types/impls/bincode",
    "common/primitive-types",
    "common/hex",
    "common/fixed-hash",
    "common/types",
    "common/rlp",
    "common/rlp-derive",
    "common/tiny-bip39",
    "common/bech32",
    #apps
    "dapps/namespace-registry",
    "dapps/builtin",
    #runtime
    "runtime/std",
    "runtime/framework",
    "runtime/build",
    "runtime/rune",
    "runtime/vm",
    #utils
    "utils/wasm-builder",
    "utils/wit-codegen",
    "utils/prost-extra-derive",
    "utils/prost-extra-build",
    "utils/prost-extra",
    "utils/prost-refect/prost-reflect",
    "utils/prost-refect/prost-reflect-build",
    "utils/prost-refect/prost-reflect-conformance-tests",
    "utils/prost-refect/prost-reflect-derive",
    "utils/prost-refect/prost-reflect-tests",
]

[workspace.dependencies]
anyhow = "1.0.65"
bincode = { version = "2.0.0-rc.2", default-features = false, features = ["alloc", "derive"] }
rocksdb = { version = "0.17.0" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
tonic = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.2"
prost = { version = "0.11.0", default-features = false, features = ["prost-derive"] }
prost-build = { version = "0.11.0" }
prost-reflect = { path = "utils/prost-refect/prost-reflect", default-features = false, features = ["derive"]}
prost-reflect-build = { version = "0.10.0"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.130", default-features = false, features = ["derive", "alloc"] }
clap = { version = "3.0.13", features = ["derive"] }
clap_lex = { version = "0.3.1" }
wit-codegen = { path = "utils/wit-codegen" }
prost-extra = { path = "utils/prost-extra" }
prost-extra-build = { path = "utils/prost-extra-build" }
hex = { path = "common/hex" }
rune-framework = { path = "runtime/framework" }
rune-std = { path = "runtime/std" }
primitive-types = { path = "common/primitive-types" }
num-traits = "0.2.15"
getset = "0.1.2"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
parking_lot = "0.12.1"
protobuf = { git = "https://github.com/padicresearch/rust-protobuf.git" }
protobuf-json-mapping = { git = "https://github.com/padicresearch/rust-protobuf.git" }
protobuf-parse = { git = "https://github.com/padicresearch/rust-protobuf.git" }
crossbeam = { version = "0.8"}