[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
anyhow = "1.0.45"
storage = { path = "../storage" }
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
primitive-types = { path = "../common/primitive-types" }
crypto = { path = "../crypto" }
codec = { path = "../codec" }
types = { path = "../common/types" }