[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7"
rand_chacha = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
rand_core = "0.5.0"
hex = "0.4.3"
anyhow = "1.0.45"
thiserror = "1.0.30"
flexbuffers = "2.0.0"
bincode = "1.0.130"
serde = { version = "1.0.130", features = ["derive"] }
merkle = {path = "../merkle"}
storage = {path = "../storage"}
codec = {path = "../codec"}
types = {path = "../common/types"}
account = {path = "../account"}
chrono = "0.4.19"
itertools = "0.10.3"
rusqlite = "0.26.3"
tokio = { version = "1", features = ["full"] }
commitlog = "0.2"
derive-getters = "0.2.0"
libp2p = { version = "0.41.0", features = ["tcp-tokio"] }
num-bigint = "0.4.3"
primitive-types = { path = "../common/primitive-types"}