[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
anyhow = { workspace = true }
thiserror = "1.0.30"
storage = { path = "../storage" }
codec = { path = "../codec" }
types = { path = "../common/types" }
traits = { path = "../common/traits" }
account = { path = "../account" }
state = { path = "../state" }
txpool = { path = "../txpool" }
crypto = { path = "../crypto" }
tokio = { version = "1", features = ["sync"] }
primitive-types = { path = "../common/primitive-types" }
lru = "0.7.2"
tracing = { path = "../common/tracing" }
rocksdb = { version = "0.17.0" }
colored = "2.0.0"
