[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
storage = { path = "../storage" }
codec = { path = "../codec" }
types = { path = "../common/types" }
traits = { path = "../common/traits" }
account = { path = "../account" }
state = { path = "../state" }
rt-vm = { path = "../runtime/vm" }
txpool = { path = "../txpool" }
crypto = { path = "../crypto" }
tokio = {  workspace = true, features = ["sync"] }
primitive-types = { path = "../common/primitive-types" }
cached = "0.42.0"
tracing = { path = "../common/tracing" }
