[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
json_dotpath = "1.1.0"
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_lex = { workspace = true }

protobuf = { workspace = true }
protobuf-json-mapping = { workspace = true }
protobuf-parse = { workspace = true }

pretty-hex = "0.3.0"
#local Deps
codec = { path = "../codec" }
hex = { path = "../common/hex" }
account = { path = "../account" }
transaction = { path = "../transaction" }
types = { path = "../common/types" }
primitive-types = { path = "../common/primitive-types" }
[build-dependencies]
tonic-build = "0.8.0"
