[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_lex = { workspace = true }
prost-reflect = { workspace = true, features = ["serde", "serde-value"] }

json_dotpath = "1.1.0"
nom = "7.1.3"
pretty-hex = "0.3.0"
base64 = "0.21.0"
#local Deps
codec = { path = "../codec" }
hex = { path = "../common/hex" }
account = { path = "../account" }
crypto = { path = "../crypto" }
transaction = { path = "../transaction" }
types = { path = "../common/types" }
rune-framework = { path = "../runtime/framework" }
primitive-types = { path = "../common/primitive-types" }
[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.11.8"
