[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
thiserror = "1.0.30"
types = { path = "../common/types" }
traits = { path = "../common/traits" }
crypto = { path = "../crypto" }
primitive-types = { path = "../common/primitive-types" }
chrono = "0.4"