[package]
name = "crypto"
version = "0.1.0"
authors = ["mambisi <lilbizi96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
primitive-types = { path = "../common/primitive-types", default-features = false }
sha3 = { version = "0.10.6", default-features = false,  features = ["oid"] }
sha2 = { version = "0.10.6", default-features = false,  features = ["oid","asm-aarch64", "asm"] }
digest = "0.10.3"
ripemd = { version = "0.1.1", default-features = false,  features = ["oid"] }
k256 = { version = "0.11.4", features = ["ecdsa-core", "ecdsa", "keccak256"] }
rand_core = "0.6.3"
[dev-dependencies]
rand_chacha = "0.3.1"

[features]
default = []
std = [
    "primitive-types/std"
]