[package]
name = "merkle"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
sha2 = "0.9.2"
hex = "0.4.2"
bloomfilter = { git = "https://github.com/mambisi/rust-bloom-filter.git"}