[package]
name = "merkle"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = { git = "https://github.com/mambisi/rust-bloom-filter.git"}
thiserror = "1.0"
crypto = { path = "../crypto"}