[package]
name = "morph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.45"
thiserror = "1.0.30"
storage = {path = "../storage"}
types = {path = "../common/types"}
account = {path = "../account"}
chrono = "0.4.19"