[package]
name = "morph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.45"
thiserror = "1.0.30"
storage = {path = "../storage"}
types = {path = "../common/types"}
traits = {path = "../common/traits"}
account = {path = "../account"}
codec = {path = "../codec"}
chrono = "0.4.19"
hex = "0.4.3"
commitlog = "0.2"
primitive-types = { path = "../common/primitive-types" }
transaction = { path = "../transaction" }
[dev-dependencies]
tempdir = "0.3.7"