[package]
name = "morph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.45"
thiserror = "1.0.30"
storage = {path = "../storage"}
types = {path = "../common/types"}
traits = {path = "../common/traits"}
account = {path = "../account"}
codec = {path = "../codec"}
crypto = {path = "../crypto"}
chrono = "0.4.19"
hex = "0.4.3"
commitlog = "0.2"
primitive-types = { path = "../common/primitive-types" }
tracing = { path = "../common/tracing" }
transaction = { path = "../transaction" }
merk = {git = "https://github.com/mambisi/merk.git", branch = "develop"}
rocksdb = { version = "0.17.0"}
num_cpus = "1.13.1"
tempdir = "0.3.7"
rand = "0.8.4"
[dev-dependencies]
fs_extra = "1.2.0"
tempdir = "0.3.7"