[package]
name = "node"
version = "0.1.0"
authors = ["mambisi <lilbizi96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
actix = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.45"
indexmap = "1.8.2"
rocksdb = { version = "0.17.0" }
temp-dir = "0.1.11"
clap = { version = "3.0.13", features = ["derive"] }
# Local Dependencies
crypto = { path = "../crypto" }
merkle = { path = "../merkle" }
blockchain = { path = "../blockchain" }
p2p = { path = "../p2p" }
storage = { path = "../storage" }
types = { path = "../common/types" }
txpool = { path = "../txpool" }
state = { path = "../state" }
consensus = { path = "../consensus" }
miner = { path = "../miner" }
kernel = { path = "../kernel" }
account = { path = "../account" }
traits = { path = "../common/traits" }
tracing = { path = "../common/tracing" }
primitive-types = { path = "../common/primitive-types" }