[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { path = "../common/tracing" }
colored = "2.0.0"
async-trait = "0.1.52"
derive-getters = "0.2.0"
libp2p = { version = "0.41.0", features = ["tcp-tokio"] }
storage = { path = "../storage" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
types = { path = "../common/types" }
primitive-types = { path = "../common/primitive-types" }
hex = "0.4.3"
anyhow = "1.0.45"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "5.0.0"
public-ip = "0.2.2"