[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing =  { workspace = true }
traits = { path = "../common/traits" }
colored = "2.0.0"
async-trait = "0.1.52"
derive-getters = "0.2.0"
libp2p = { version = "0.41.0", features = ["tcp-tokio"] }
storage = { path = "../storage" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
blockchain = { path = "../blockchain" }
types = { path = "../common/types" }
prost = "0.11.0"
primitive-types = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = "5.0.0"