[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
[build-dependencies]
tonic-build = "0.7.2"