[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
types = {path = "../common/types"}
[build-dependencies]
tonic-build = "0.8.0"