[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
anyhow = "1.0.45"
thiserror = "1.0.30"
proto = { path = "../proto" }
codec = { path = "../codec" }
types = { path = "../common/types" }
traits = { path = "../common/traits" }
blockchain = { path = "../blockchain" }
tracing = { path = "../common/tracing" }