[package]
name = "rpc"
version = "0.1.0"
edition = "2021"
include = ["proto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic ={ workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
#local Deps
codec = { path = "../codec" }
types = { path = "../common/types" }
primitive-types = { path = "../common/primitive-types" }
traits = { path = "../common/traits" }
blockchain = { path = "../blockchain" }
txpool = { path = "../txpool" }
tracing =  { workspace = true }
hex = { path = "../common/hex" }
transaction = { path = "../transaction" }

[build-dependencies]
tonic-build = "0.8.0"
