[package]
name = "smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path = "../common/traits" }
primitive-types = { path = "../common/primitive-types" }
rocksdb = { version = "0.17.0" }
dashmap = { version = "5.2.0", features = ["serde"] }
crypto = { path = "../crypto" }
codec = { path = "../codec" }
tracing = { path = "../common/tracing" }
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive", "rc"] }
anyhow = { workspace = true }
num_cpus = "1.13.1"
bincode = { version="2.0.0-rc.2", features=["serde"]}
hex = {path = "../common/hex"}
[dev-dependencies]
tempdir = "0.3.7"
types = { path = "../common/types" }