[package]
name = "smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { path = "../common/primitive-types" }
codec = { path = "../codec" }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
crypto = { path = "../crypto" }
hex = { path = "../common/hex" }
[dev-dependencies]
tempdir = "0.3.7"
dashmap = "5.4.0"