[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
storage = { path = "../storage" }
types = { path = "../common/types" }
traits = { path = "../common/traits" }
account = { path = "../account" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
chrono = "0.4.19"
hex = { path = "../common/hex" }
commitlog = "0.2"
primitive-types = { path = "../common/primitive-types" }
tracing = { workspace = true }
transaction = { path = "../transaction" }
builtin = { path = "../apps/builtin" }
smt = { path = "../smt" }
bincode = { workspace = true }
prost = { workspace = true }
rocksdb = { version = "0.17.0" }
num_cpus = "1.13.1"
tempdir = "0.3.7"
rand = "0.8.4"
dashmap = "5.4.0"
[dev-dependencies]
fs_extra = "1.2.0"
tempdir = "0.3.7"
