[package]
name = "storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.0.130"
types = {path = "../common/types"}
sled = "0.34.7"
itertools = "0.10.3"
