[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
serde = { version = "1.0.130", features = ["derive"] }
anyhow = { workspace = true }
thiserror = "1.0.30"
hex = "0.4.3"
types = { path = "../common/types" }
traits = { path = "../common/traits" }
account = { path = "../account" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
primitive-types = { path = "../common/primitive-types" }