[package]
name = "txpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../common/types" }
transaction = { path = "../transaction" }
account = { path = "../account" }
dashmap = "5.0.0"
anyhow = { workspace = true }
thiserror = "1.0.30"
hex = "0.4.3"
primitive-types = { path = "../common/primitive-types" }
tracing = { path = "../common/tracing" }
traits = { path = "../common/traits" }
tokio = { version = "1", features = ["full"] }
itertools = "0.10.3"
chrono = "0.4"
[dev-dependencies]
rand = "0.7"
rand_chacha = "0.2"
codec = { path = "../codec" }