[package]
name = "builtin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namespace-registry = { path = "../namespace-registry" }
types = { path = "../../common/types" }
traits = { path = "../../common/traits" }
anyhow = { workspace = true }
prost = { workspace = true }
primitive-types = { path = "../../common/primitive-types" }
