[package]
name = "example"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rune-framework = { workspace = true }
rune-std = { workspace = true }
prost = { workspace = true }
primitive-types = { workspace = true }
anyhow = { workspace = true, default-features = false }
[build-dependencies]
prost-build = { workspace = true }
wasm-builder = { path = "../../utils/wasm-builder" }