[package]
name = "apps-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
bincode = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
odana-rt-api = { path = "../../runtime/api" }
md5 = "0.7.0"