[package]
name = "primitive-types"
version = "0.10.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
description = "Primitive types shared by Ethereum and Substrate"
edition = "2018"

[dependencies]
fixed-hash = { version = "0.7", path = "../fixed-hash" }
uint = { version = "0.9.0", path = "../uint" }
impl-serde = { version = "0.3.1", path = "impls/serde" }
impl-num-traits = { version = "0.1.0", path = "impls/num-traits"}

[[test]]
name = "fp_conversion"
required-features = ["fp-conversion"]

[[test]]
name = "num_traits"
required-features = ["num-traits"]
